@@ -1,3 +1,9 @@
+2012-04-03 John Wu <John dot Wu at ACM dot org>
+	* examples/tcapi.c: add code to use fastbit_get_result_row_ids
+	* java/FastBit.c:
+	Java_gov_lbl_fastbit_FastBit_get_1result_1row_1ids mistakenly
+	passed jintArray as uint32_t* to fastbit_get_result_row_ids
+
 2012-04-01 John Wu <John dot Wu at ACM dot org>
 	* java/gov/lbl/fastbitFastBit.java, java/FastBit.h,
 	java/FastBit.c: add function fastbit_get_result_row_ids
